// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar component should be fixed on top 1`] = `
<DocumentFragment>
  <nav
    class="navbar is-fixed-top"
    role="navigation"
  />
</DocumentFragment>
`;

exports[`Navbar component should concat Bulma class with classes in props 1`] = `
<DocumentFragment>
  <nav
    class="navbar other-class test"
    role="navigation"
  />
</DocumentFragment>
`;

exports[`Navbar component should have Navbar classname 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
    role="navigation"
  >
    <div
      class="navbar-brand"
    >
      <a
        class="navbar-item"
        href="#"
      >
        <img
          alt=""
          src="/"
        />
      </a>
      <div
        class="navbar-burger trigger-menu"
        role="button"
        style="outline: none;"
        tabindex="0"
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div>
      TEST
    </div>
    <div
      class="navbar-menu"
    >
      <div
        class="navbar-start"
      >
        <span
          class="navbar-item has-dropdown is-hoverable"
        >
          <span
            class="navbar-link"
          >
            Docs
          </span>
          <span
            class="navbar-dropdown is-boxed"
          >
            <a
              class="navbar-item"
              href="#"
            >
              Home
            </a>
            <div
              class="navbar-divider"
            />
            <a
              class="navbar-item"
              href="#"
            >
              Home
            </a>
          </span>
        </span>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navbar component should have custom inline styles 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
    role="navigation"
    style="width: 200px; z-index: 1;"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
    role="navigation"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 2`] = `
<DocumentFragment>
  <div
    class="navbar-brand"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 3`] = `
<DocumentFragment>
  <div
    class="navbar-burger is-active"
    role="button"
    style="outline: none;"
    tabindex="0"
  >
    <span />
    <span />
    <span />
  </div>
</DocumentFragment>
`;

exports[`Navbar component should render 4`] = `
<DocumentFragment>
  <div
    class="navbar-start"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 5`] = `
<DocumentFragment>
  <div
    class="navbar-divider"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 6`] = `
<DocumentFragment>
  <span
    class="navbar-dropdown"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 7`] = `
<DocumentFragment>
  <a
    class="navbar-item"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 8`] = `
<DocumentFragment>
  <span
    class="navbar-link"
  />
</DocumentFragment>
`;

exports[`Navbar component should render 9`] = `
<DocumentFragment>
  <div
    class="navbar-menu is-active"
  />
</DocumentFragment>
`;

exports[`Navbar component should render as an html section 1`] = `
<DocumentFragment>
  <section
    class="navbar"
    role="navigation"
  />
</DocumentFragment>
`;

exports[`Navbar component should render on server side 1`] = `"<nav class=\\"navbar is-fixed-top\\" role=\\"navigation\\"></nav>"`;

exports[`Navbar component should render on server side: top 1`] = `""`;
